# fluxo

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.ps1  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
example_project/: fluxo.yaml  profiles.yaml
example_project/models/: daily_summary.sql  extract_users.sql  raw_orders.sql  transform_users.sql
src/fluxo/: __init__.py  cli.py
src/fluxo/api/: __init__.py  main.py
src/fluxo/core/: __init__.py  adapters.py  graph.py  parser.py  runner.py
src/fluxo/ui/: __init__.py  app.py
test_project/: fluxo.yaml  profiles.yaml
test_project/models/: example.sql
tests/: test_api.py  test_parser.py  test_runner.py
